# YLog

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/you/chen/ylog/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AutoBuffer.cpp  AutoBuffer.h  CMakeLists.txt  CryptLogBuffer.cpp  CryptLogBuffer.h  Java2YLog.cpp  Log.h  LogAppender.cpp  LogAppender.h  LogBuffer.h  LogCrypt.cpp  LogCrypt.h  MmapUtils.cpp  MmapUtils.h  NoCryptLogBuffer.cpp  NoCryptLogBuffer.h  PtrBuffer.cpp  PtrBuffer.h  Tea_crypt.cpp  Tea_crypt.h
app/src/main/java/you/chen/ylog/: App.java  FileUtils.java  ProcessUtils.java
app/src/main/java/you/chen/ylog/log/: AndroidLogger.java  AppenderLogger.java  Interceptor.java  LevelInterceptor.java  LogAppender.java  LogUtils.java  Logger.java  MultiLogger.java
app/src/main/java/you/chen/ylog/ui/: FileUtils.java  MainActivity.java  Test.java  (+1 more)
app/src/main/res/layout/: activity_main.xml  activity_two.xml
app/src/test/java/you/chen/ylog/: ExampleUnitTest.java
decrypt/: build.gradle
decrypt/src/androidTest/java/you/chen/decrypt/: ExampleInstrumentedTest.java
decrypt/src/main/: AndroidManifest.xml
decrypt/src/main/cpp/: AutoBuffer.cpp  AutoBuffer.h  CMakeLists.txt  JavaDecryptYLog.cpp  Log.h  Tea_crypt.cpp  Tea_crypt.h
decrypt/src/main/java/you/chen/decrypt/: FileUtils.java  LogDecrypt.java  MainActivity.java
decrypt/src/main/res/layout/: activity_main.xml
decrypt/src/main/res/values/: colors.xml  strings.xml
decrypt/src/test/java/you/chen/decrypt/: ExampleUnitTest.java
